[gd_scene load_steps=6 format=3 uid="uid://bfm1r6o0i6amu"]

[ext_resource type="PackedScene" uid="uid://ctu0f3tq2gx1q" path="res://scenes/prefabs/WallTileMap.tscn" id="1_encht"]
[ext_resource type="Script" path="res://scripts/resources/Menu.gd" id="1_sob44"]
[ext_resource type="Texture2D" uid="uid://dh8wm78silq30" path="res://assets/prefabs/Button.png" id="2_qx2ky"]
[ext_resource type="Texture2D" uid="uid://clyi7v7ggntnx" path="res://assets/prefabs/Button-Hover.png" id="3_2tx7f"]

[sub_resource type="LabelSettings" id="LabelSettings_mjq1d"]
font_size = 60
font_color = Color(0.0196078, 0.505882, 0.592157, 1)
shadow_size = 18
shadow_color = Color(0, 0.262745, 0.380392, 0.886275)
shadow_offset = Vector2(2, 2)

[node name="Menu" type="Node2D"]
script = ExtResource("1_sob44")

[node name="BackgroundCanvasLayer" type="CanvasLayer" parent="."]

[node name="WallTileMap" parent="BackgroundCanvasLayer" instance=ExtResource("1_encht")]
layer_0/tile_data = PackedInt32Array(0, 4, 0, 65536, 4, 1, 1, 65540, 0, 65537, 65540, 1, 2, 131076, 0, 65538, 131076, 1, 3, 196612, 0, 65539, 196612, 1, 4, 65540, 0, 65540, 65540, 1, 5, 131076, 0, 65541, 131076, 1, 6, 196612, 0, 65542, 196612, 1, 7, 65540, 0, 65543, 65540, 1, 8, 131076, 0, 65544, 131076, 1, 9, 196612, 0, 65545, 196612, 1, 10, 65540, 0, 65546, 65540, 1, 11, 131076, 0, 65547, 131076, 1, 12, 196612, 0, 65548, 196612, 1, 13, 65540, 0, 65549, 65540, 1, 14, 131076, 0, 65550, 131076, 1, 15, 196612, 0, 65551, 196612, 1, 16, 65540, 0, 65552, 65540, 1, 17, 131076, 0, 65553, 131076, 1, 18, 393220, 0, 65554, 393220, 1, 19, 65540, 0, 65555, 65540, 1, 20, 131076, 0, 65556, 131076, 1, 21, 196612, 0, 65557, 196612, 1, 22, 65540, 0, 65558, 65540, 1, 23, 131076, 0, 65559, 131076, 1, 24, 196612, 0, 65560, 196612, 1, 25, 65540, 0, 65561, 65540, 1, 26, 131076, 0, 65562, 131076, 1, 27, 196612, 0, 65563, 196612, 1, 28, 65540, 0, 65564, 65540, 1, 29, 131076, 0, 65565, 131076, 1, 30, 196612, 0, 65566, 196612, 1, 31, 65540, 0, 65567, 65540, 1, 32, 131076, 0, 65568, 131076, 1, 33, 196612, 0, 65569, 196612, 1, 34, 65540, 0, 65570, 65540, 1, 35, 131076, 0, 65571, 131076, 1, 36, 196612, 0, 65572, 196612, 1, 37, 65540, 0, 65573, 65540, 1, 38, 393220, 0, 65574, 393220, 1, 39, 458756, 0, 65575, 458756, 1, 131111, 458756, 2, 131072, 4, 2, 196608, 4, 3, 262144, 4, 4, 327680, 4, 2, 393216, 4, 3, 458752, 4, 4, 524288, 4, 2, 589824, 4, 3, 655360, 4, 2, 720896, 4, 3, 786432, 4, 4, 851968, 4, 2, 917504, 4, 3, 983040, 4, 4, 1048576, 4, 2, 1114112, 4, 3, 1179648, 4, 4, 196647, 458756, 3, 262183, 458756, 2, 327719, 458756, 3, 393255, 458756, 2, 458791, 458756, 3, 524327, 458756, 2, 589863, 458756, 3, 655399, 458756, 2, 720935, 458756, 3, 786471, 458756, 2, 852007, 458756, 3, 917543, 458756, 2, 983079, 458756, 3, 1048615, 458756, 2, 1114151, 458756, 3, 1179687, 458756, 2, 1245223, 458756, 3, 1441793, 524292, 0, 1441794, 524292, 0, 1441795, 524292, 0, 1441796, 524292, 0, 1441797, 524292, 0, 1441798, 524292, 0, 1441799, 524292, 0, 1441800, 524292, 0, 1441801, 524292, 0, 1441802, 524292, 0, 1441803, 524292, 0, 1441804, 524292, 0, 1441805, 524292, 0, 1441806, 524292, 0, 1441807, 524292, 0, 1441808, 524292, 0, 1441809, 524292, 0, 1441810, 524292, 0, 1441811, 524292, 0, 1441812, 524292, 0, 1441813, 524292, 0, 1441814, 524292, 0, 1441815, 524292, 0, 1441816, 524292, 0, 1441817, 524292, 0, 1441818, 524292, 0, 1441819, 524292, 0, 1441820, 524292, 0, 1441821, 524292, 0, 1441822, 524292, 0, 1441823, 524292, 0, 1441824, 524292, 0, 1441825, 524292, 0, 1441826, 524292, 0, 1441827, 524292, 0, 1441828, 524292, 0, 1441829, 524292, 0, 1441830, 524292, 0, 1376295, 458756, 8, 1441831, 524292, 0, 1310759, 458756, 7, 1310720, 4, 7, 1376256, 4, 8, 1441792, 524292, 0, 1245184, 4, 5, 1376257, 65540, 8, 1376258, 131076, 8, 1376259, 196612, 8, 1376260, 262148, 8, 1376261, 327684, 8, 1376262, 393220, 8, 1376263, 65540, 8, 1376264, 131076, 8, 1376265, 196612, 8, 1376266, 262148, 8, 1376267, 327684, 8, 1376268, 65540, 8, 1376269, 131076, 8, 1376270, 196612, 8, 1376271, 262148, 8, 1376272, 327684, 8, 1376273, 393220, 8, 1376274, 65540, 8, 1376275, 131076, 8, 1376276, 196612, 8, 1376277, 262148, 8, 1376278, 327684, 8, 1376279, 393220, 8, 1376280, 65540, 8, 1376281, 131076, 8, 1376282, 196612, 8, 1376283, 262148, 8, 1376284, 327684, 8, 1376285, 393220, 8, 1376286, 65540, 8, 1376287, 131076, 8, 1376288, 196612, 8, 1376289, 65540, 8, 1376290, 131076, 8, 1376291, 196612, 8, 1376292, 262148, 8, 1376293, 327684, 8, 1376294, 393220, 8)

[node name="ColorRect" type="ColorRect" parent="BackgroundCanvasLayer"]
offset_left = 64.0
offset_top = 128.0
offset_right = 2496.0
offset_bottom = 1408.0
color = Color(0, 0.215686, 0.223529, 1)

[node name="ButtonsCanvasLayer" type="CanvasLayer" parent="."]

[node name="StartButton" type="TouchScreenButton" parent="ButtonsCanvasLayer"]
position = Vector2(896, 320)
scale = Vector2(2, 1.5)
texture_normal = ExtResource("2_qx2ky")
texture_pressed = ExtResource("3_2tx7f")

[node name="Label" type="Label" parent="ButtonsCanvasLayer/StartButton"]
offset_right = 384.0
offset_bottom = 128.0
text = "Start
"
label_settings = SubResource("LabelSettings_mjq1d")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="RecordButton" type="TouchScreenButton" parent="ButtonsCanvasLayer"]
position = Vector2(896, 640)
scale = Vector2(2, 1.5)
texture_normal = ExtResource("2_qx2ky")
texture_pressed = ExtResource("3_2tx7f")

[node name="Label" type="Label" parent="ButtonsCanvasLayer/RecordButton"]
offset_right = 384.0
offset_bottom = 128.0
text = "Records"
label_settings = SubResource("LabelSettings_mjq1d")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="QuitButton" type="TouchScreenButton" parent="ButtonsCanvasLayer"]
position = Vector2(896, 960)
scale = Vector2(2, 1.5)
texture_normal = ExtResource("2_qx2ky")
texture_pressed = ExtResource("3_2tx7f")

[node name="Label" type="Label" parent="ButtonsCanvasLayer/QuitButton"]
offset_right = 384.0
offset_bottom = 128.0
text = "Quit"
label_settings = SubResource("LabelSettings_mjq1d")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[connection signal="released" from="ButtonsCanvasLayer/StartButton" to="." method="_on_start_button_released"]
[connection signal="released" from="ButtonsCanvasLayer/RecordButton" to="." method="_on_record_button_released"]
[connection signal="released" from="ButtonsCanvasLayer/QuitButton" to="." method="_on_quit_button_released"]
